# cutter

./: .gitignore  README.md
py_data/: build.py  pyproject.toml
py_data/rs_cutter/: Cargo.toml  rs_cutter.pyi
py_data/rs_cutter/src/: errors.rs  lib.rs
py_data/src/py_data/: __init__.py  benchmark.py  cutter.py  main.py  tablify.py  utils.py
py_data/tests/: test_binding.py  test_cutter.py  test_rs_cutter.py  test_tablify.py
rs_cutter/: Cargo.toml
