[project]
name = "py-data"
version = "0.1.0"
description = ""
authors = [
    {name = "vichry2",email = "victor.henry@mail.mcgill.ca"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)"
]

[tool.poetry]
packages = [{include = "py_data", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true